# docker-ui-tauri

./: DOCKER_RS_REMOVED.md  README.md  package.json  pnpm-lock.yaml  ssh_connections_example.json
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: client_ssh.rs  docker.rs  docker_ssh.rs  lib.rs  main.rs  ssh_example.rs
src/components/: ConnectionToggle.tsx
src/components/AddServerModal/: index.tsx
src/components/ContainerDetails/: index.tsx
src/components/CreateContainerModal/: index.tsx
src/components/CreateNetworkModal/: index.tsx
src/components/CreateVolumeModal/: index.tsx
src/components/Dashboard/: index.tsx
src/components/Header/: index.tsx
src/components/LineChart/: index.tsx
src/components/LoadingSpinner/: index.tsx
src/components/MultiLineChart/: index.tsx
src/components/NavBar/: index.tsx
src/components/PullImageModal/: index.tsx
src/components/Toast/: index.tsx
src/components/dashboard/: index.tsx
src/components/header/: index.tsx
src/contexts/: DockerConnectionContext.tsx  MonitoringContext.tsx
src/hooks/: useDockerApi.ts  useSshManager.ts
src/screens/Containers/: index.tsx
src/screens/Dashboard/: index.tsx
src/screens/Images/: index.tsx
src/screens/Networks/: index.tsx
src/screens/Servers/: index.tsx
src/screens/Volumes/: index.tsx
src/utils/: formatDate.ts
