[package]
name = "docker-tauri"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "docker_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
anyhow = "1.0.98"
bollard = "0.19.2"
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
rand = "0.8"
plotters = "0.3"
ssh2 = "0.9"
dirs = "5.0"
bytesize = "1.3.0"
